[package]
name = "pass"
version = "0.1.0"
edition = "2021"
description = "A simple totp validator demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
totp-rs = { version = "5.5.1", features = ["gen_secret", "qr"] }
